--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -1,10 +1,9 @@
 # Habilitar el motor de reescritura
 RewriteEngine On
 
-# Permitir CORS desde cualquier origen (para desarrollo)
-Header set Access-Control-Allow-Origin "*"
-Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-Header set Access-Control-Allow-Headers "Content-Type, Authorization"
+# Responder a peticiones OPTIONS (preflight CORS)
+RewriteCond %{REQUEST_METHOD} OPTIONS
+RewriteRule ^(.*)$ $1 [R=200,L]
 
 # Redirigir todas las peticiones a la carpeta api
 RewriteCond %{REQUEST_FILENAME} !-f
